--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,6 +37,7 @@ jobs:
         id: tests
         uses: akevalion/PharoTestsAction@v1
         with:
+          removes-repo: 'Roassal, Numeric, RTree'
           baseline: 'RTree'
           group: 'default'
           tests: 'RTree'
